# AgentAZAll

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TESTIMONIALS.md  pyproject.toml  trust-gen.sh
.claude/: CLAUDE.md
.claude/commands/: mail.md  save-context.md
.github/workflows/: ci.yml
azclaw/: CHANGELOG.md  README.md  pyproject.toml
azclaw/azclaw/: __init__.py  agent.py  backend.py  cli.py  llm.py  orchestrator.py  tools.py  topic.py
azclaw/docs/: architecture.md  custom-tools.md  getting-started.md  topic-configuration.md
azclaw/examples/: three-ravens.py
azclaw/tests/: test_agent.py  test_orchestrator.py  test_tools.py
examples/: config.json  config_human.json
examples/data/mailboxes/demo-agent@localhost/2026-03-08/inbox/: a1b2c3d4e5f6.txt
examples/data/mailboxes/demo-agent@localhost/2026-03-08/notes/: setup-checklist.txt
examples/data/mailboxes/demo-agent@localhost/2026-03-08/remember/: project-setup.txt
examples/data/mailboxes/demo-agent@localhost/2026-03-08/what_am_i_doing/: tasks.txt
examples/data/mailboxes/demo-agent@localhost/2026-03-08/who_am_i/: identity.txt
examples/multi-agent-discussion/: orchestrator.py  orchestrator_v3.py
examples/multi-agent-discussion/openclaw-skill/: SKILL.md
examples/multi-agent-discussion/results/: cobol-migration_20260317_091848.json  rust-game-engine_20260317_091416.json
examples/multi-agent-discussion/topics/: carddemo-migration.json  cobol-migration.json  rust-game-engine.json
hf-demo/: README.md  app.py  llm_bridge.py  requirements.txt  seed_data.py
hf-demo/demo_data/mailboxes/agent-alpha@localhost/2026-03-13/notes/: handoff.txt
hf-demo/demo_data/mailboxes/agent-alpha@localhost/2026-03-13/remember/: collaboration-insight.txt  design-philosophy.txt
hf-demo/demo_data/mailboxes/agent-alpha@localhost/2026-03-13/sent/: 9e6007a52cbd.txt
hf-demo/demo_data/mailboxes/agent-alpha@localhost/2026-03-13/what_am_i_doing/: tasks.txt
hf-demo/demo_data/mailboxes/agent-alpha@localhost/2026-03-13/who_am_i/: identity.txt
hf-demo/demo_data/mailboxes/agent-beta@localhost/2026-03-13/remember/: tool-observation.txt
hf-demo/demo_data/mailboxes/agent-beta@localhost/2026-03-13/what_am_i_doing/: tasks.txt
hf-demo/demo_data/mailboxes/agent-beta@localhost/2026-03-13/who_am_i/: identity.txt
hf-demo/src/agentazall/: __init__.py  config.py  finder.py  helpers.py  index.py  messages.py
hf-demo/src/agentazall/commands/: notes.py
landing/: index.html  papers.html  style.css
launch/: post_process_images.py
launch/images-hybrid/: 21_raven_research_archive.json  24_ravens_orchestrator.json  25_bloodhound_detection.json  26_squirrel_memory.json  27_beetle_tools.json  paper_crypto_signature.json  paper_hero_mailbox.json  paper_multi_model.json
launch/images-oreilly/: 21_raven_research_archive.json  24_three_ravens_orchestrator.json  25_bloodhound_hardware_detection.json  26_filing_cabinet_squirrel.json  27_clockwork_beetle.json
moltbook/: .gitignore  moltbook_bot.py
onboarding/: ONBOARDING.md
paper/: 00-index.md  01-introduction.md  02-related-work.md  03-design-principles.md  04-architecture.md  05-cryptographic-identity.md  06-transport-layer.md  07-experimental-design.md  08-results.md  09-cross-model-communication.md  10-discussion.md  11-conclusion.md  12-references.md  agentazclaw-whitepaper.md  build_html.py  paper.html
relay/: cleanup.py  deploy-tls.sh  deploy_configs.sh  ftp_relay.py  healthcheck.sh  message_ttl.py  quota_check.py  registration_server.py  setup.sh
relay/configs/: nftables.conf  postfix_main.cf  vsftpd.conf
relay/configs/fail2ban/: agentazall-register.conf  jail.local
relay/rust-relay/: Cargo.toml  README.md  agentazall-relay.service
relay/rust-relay/src/: main.rs
relay/systemd/: agentazall-register.service
src/agentazall/: __init__.py  __main__.py  address_filter.py  agenttalk_server.py  cli.py  config.py  daemon.py  email_server.py  ftp_server.py  identity.py  mcp_shim.py  messages.py  multi_transport.py  portation.py  transport_agenttalk.py  transport_email.py  transport_ftp.py  trust.py  web_ui.py
src/agentazall/commands/: __init__.py  filtering.py  identity.py  memory.py  messaging.py  quickstart.py  register.py  relay_cmd.py  server.py  setup.py  skills.py  startup.py  system.py  trust_cmd.py
src/agentoall/: __init__.py  __main__.py  cli.py  config.py  daemon.py  email_server.py  finder.py  ftp_server.py  helpers.py  index.py  messages.py  portation.py  transport_email.py  transport_ftp.py  web_ui.py
src/agentoall/commands/: __init__.py  identity.py  memory.py  messaging.py  notes.py  server.py  setup.py  skills.py  system.py
support-agent/: agent.py  bulletin.py  config.py  db.py  gatekeeper.py  knowledge.py  llm_client.py  start.sh  welcome.py
support-agent/bulletins/: 2026-03-09_support-agent-online.md
tests/: conftest.py  test_address_filter.py  test_config.py  test_helpers.py  test_identity.py  test_index.py  test_mcp_shim.py  test_messages.py  test_multi_transport.py
utility-agents/: base_service.py  start_services.sh  test_binary_attachment.py  translation_agent.py  tts_agent.py  whisper_agent.py
wiki/: Home.md  OpenClaw-NemoClaw-Integration.md
(+12 files in other folders)
