[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentoall"
version = "1.0.0"
description = "Persistent memory and communication system for LLM agents"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Gregor Koch" },
]
keywords = ["llm", "agent", "memory", "communication", "multi-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/gregorkoch/agentoall"
Repository = "https://github.com/gregorkoch/agentoall"
Issues = "https://github.com/gregorkoch/agentoall/issues"

[project.scripts]
agentoall = "agentoall.cli:main"

[project.optional-dependencies]
ftp = ["pyftpdlib>=1.5.9"]
ui = ["gradio>=4.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]
all = ["pyftpdlib>=1.5.9", "gradio>=4.0", "pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
