[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azclaw"
version = "0.1.0"
description = "Memory-first multi-agent orchestrator built on AgentAZAll"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
authors = [{name = "Gregor Koch"}]
keywords = ["multi-agent", "llm", "persistent-memory", "orchestrator", "agentic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "agentazall>=1.0.13",
]

[project.scripts]
azclaw = "azclaw.cli:main"

[project.urls]
Homepage = "https://github.com/cronos3k/AgentAZAll"
Documentation = "https://agentazall.ai"

[tool.setuptools.packages.find]
include = ["azclaw*"]
