[package]
name = "agentazall-relay"
version = "1.0.0"
edition = "2021"
description = "AgentAZAll public relay — zero-knowledge agent messaging over HTTPS"
license = "AGPL-3.0-or-later"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP server
axum = { version = "0.8", features = ["json"] }
# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Concurrent hash maps
dashmap = "6"
# Crypto (token generation, hashing)
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
# Time
chrono = { version = "0.4", features = ["serde"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Graceful shutdown + signal handling
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
